--- a/STL_Config_Instructions/v1.2 - Alpha/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Alpha/Klipper_Config/printer.cfg
@@ -29,24 +29,24 @@
 [gcode_macro _static_variable]
 description: Global static variables that is used through out the configs
 ## Tool-head calibration
-variable_calibration_probe_x: 242.237500     # X aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
+variable_calibration_probe_x: 241.237500     # X aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
 variable_calibration_probe_y: 329.825000     # Y aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
-variable_calibration_safe_z: 60.00           # Z aproximate safe position of the Nudge probe. KEEP CONSERVATIVE TO AVOID COLLISION
-variable_calibration_min_z: 35.00            # Z aproximate probe position of the Nudge probe.
+variable_calibration_safe_z: 50.00           # Z aproximate safe position of the Nudge probe. KEEP CONSERVATIVE TO AVOID COLLISION
+variable_calibration_min_z: 30.00            # Z aproximate probe position of the Nudge probe.
 variable_calibration_abs_z_seperately: 0     # "0" = False / "1" = True. For, the Nudge probe this should be '1'
 variable_final_lift_z: 3                     # This must be the same as "final_lift_z" in [tools_calibrate] in misschanger_settings.cfg
 ## Cleaning dock
-variable_clean_dock_x: 0                     # X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP. Set to "0" to disable
+variable_clean_dock_x: 0                     # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
 variable_clean_temp: 200                     # Nozzle clean temperature
-variable_clean_threshold: 125.0              # The minimum perimeter of the print, below which the printing material will not be considered
+variable_clean_threshold: 150.0              # The minimum perimeter of the print, below which the printing material will not be considered
 ## Always on crash detection
-variable_alway_on_crash_detection: 1         # "0" = False / "1" = True
+variable_alway_on_crash_detection: 0         # "0" = False / "1" = True
 ## For heatsoak macro
-variable_heatsoak_temp: 50                   # Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below. Set to "0" to disable
+variable_heatsoak_temp: 0                    # Set to "0" to disable. Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below.
 ## Dynamic thermal expansion compensation
 variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
 variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
-variable_thermo_expand_temp_low: 0           # Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]. Set to "0" to disable
+variable_thermo_expand_temp_low: 0           #Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber].
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
