--- a/STL_Config_Instructions/v1.2 - Beta/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Beta/Klipper_Config/printer.cfg
@@ -7,7 +7,7 @@
 [include misschanger_macros/print_time_default.cfg]
 [include misschanger_macros/tool_calibrate.cfg]
 [include misschanger_macros/toolchanger.cfg]
-[include misschanger_macros/offsets_adjust_record.cfg] # Alpha only
+[include misschanger_macros/offsets_adjust_record.cfg]
 ## misschanger settings
 [include misschanger_settings.cfg]
 ## Other macros
@@ -19,7 +19,7 @@
 ####################################################################################
 [config_switch]
 [pause_resume]
-[save_babies] # Alpha only
+[save_babies]
 # ...
 # ...
 # ...
