clean-up and organise

--- a/STL_Config_Instructions/v1.2 - Beta/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.2 - Beta/Klipper_Config/printer.cfg
@@ -49,6 +49,10 @@ variable_heatsoak_temp: 0                    # Set to "0" to disable. Chamber te
 variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
 variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
 variable_thermo_expand_temp_low: 0           #Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber].
+## Fan control
+variable_nm_ciculation_speed: 0.75           # Nevermore Stealth Max fan speed in circulation mode
+variable_nm_exhaust_speed: 1.00              # Nevermore Stealth Max fan speed in exhaust mode
+variable_chamber_ciculation_speed: 0.60      # Chamber fan speed in chamber-heating mode
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
