Add chamber fan control feature

--- a/STL_&_Instructions/v1.2/Klipper_Config/printer.cfg
+++ b/STL_&_Instructions/v1.2/Klipper_Config/printer.cfg
@@ -53,6 +53,10 @@ variable_thermo_expand_temp_low: 0           #Set to "0" to disable. Chamber tem
 variable_nm_ciculation_speed: 0.75           # Nevermore Stealth Max fan speed in circulation mode
 variable_nm_exhaust_speed: 1.00              # Nevermore Stealth Max fan speed in exhaust mode
 variable_chamber_ciculation_speed: 0.60      # Chamber fan speed in chamber-heating mode
+## Fan control
+variable_nm_ciculation_speed: 0.75           # Filter fan speed in circulation mode
+variable_nm_exhaust_speed: 1.00              # Filter fan speed in exhaust mode
+variable_chamber_ciculation_speed: 0.55      # Chamber fan speed in chamber-heating mode
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
