--- a/STL_&_Instructions/v1.2/Klipper_Config/T1-SB2209-Revo-LDO.cfg
+++ b/STL_&_Instructions/v1.2/Klipper_Config/T1-SB2209-Revo-LDO.cfg
@@ -145,7 +145,7 @@ gcode:
 [tool T1]
 tool_number: 1
 extruder: extruder1
-fan: fan_generic T1_partfan
+fan: T1_partfan
 # gcode_x_offset: 0
 # gcode_y_offset: 0
 # gcode_z_offset: 0
