--- a/Klipper_Config/Alpha/printer.cfg
+++ b/Klipper_Config/Alpha/printer.cfg
@@ -58,7 +58,7 @@ variable_thermo_expand_temp_low: 0           # Set to "0" to disable. Chamber te
 variable_nm_ciculation_speed: 0.75           # Nevermore Stealth Max fan speed in circulation mode
 variable_nm_exhaust_speed: 1.00              # Nevermore Stealth Max fan speed in exhaust mode
 variable_chamber_ciculation_speed: 0.55      # Chamber fan speed in chamber-heating mode
-variable_chamber_temp_threshold: 91          # If bed temp is below this temperature, then don't enable chamber-heating mode
+variable_chamber_temp_threshold: 91          # If bed temp is above this temperature, then chamber-heating mode will be enabled on print_start
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
