Hot fix beta and add feature
Major software hot fix, see: https://github.com/VIN-y/klipper-toolchanger/pull/32#issue-3038225470

--- a/Klipper_Config/Beta/printer.cfg
+++ b/Klipper_Config/Beta/printer.cfg
@@ -1,5 +1,5 @@
 [include mainsail.cfg]
-## Linked default marcros
+## default marcros
 [include misschanger_macros/config_switch.cfg]
 [include misschanger_macros/homing.cfg]
 [include misschanger_macros/nozzle_clean.cfg]
@@ -8,11 +8,15 @@
 [include misschanger_macros/tool_calibrate.cfg]
 [include misschanger_macros/toolchanger.cfg]
 [include misschanger_macros/offsets_adjust_record.cfg]
+# ## optional default marcros
+# [include misschanger_macros/tool_calibrate_extra.cfg]    # For the Nudge probe
 ## misschanger settings
 [include misschanger_settings.cfg]
 ## Other macros
 [include macro-general.cfg]
-[include macro-testing.cfg]
+# ...
+# ...
+# ...
 
 ####################################################################################
 ##	                         Others
@@ -38,9 +42,10 @@ variable_calibration_min_z: 30.00            # Z aproximate probe position of th
 variable_calibration_abs_z_seperately: 0     # "0" = False / "1" = True. For, the Nudge probe this should be '1'
 variable_final_lift_z: 3                     # This must be the same as "final_lift_z" in [tools_calibrate] in misschanger_settings.cfg
 ## Cleaning dock
-variable_clean_dock_x: 0                     # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
+variable_clean_dock_x: 0.00                  # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
+variable_clean_speed: 7000                   # Don't set too high, the violent shaking may cause problems. CHANGE TO MATCH YOUR SET-UP.
 variable_clean_temp: 200                     # Nozzle clean temperature
-variable_clean_threshold: 150.0              # The minimum perimeter of the print, below which the printing material will not be considered
+variable_clean_threshold: 145.0              # The minimum perimeter of the print, below which the printing material will not be considered
 ## Always on crash detection
 variable_alway_on_crash_detection: 0         # "0" = False / "1" = True
 ## For heatsoak macro
@@ -48,11 +53,12 @@ variable_heatsoak_temp: 0                    # Set to "0" to disable. Chamber te
 ## Dynamic thermal expansion compensation
 variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
 variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
-variable_thermo_expand_temp_low: 0           #Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber].
+variable_thermo_expand_temp_low: 0           # Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber].
 ## Fan control
 variable_nm_ciculation_speed: 0.75           # Nevermore Stealth Max fan speed in circulation mode
 variable_nm_exhaust_speed: 1.00              # Nevermore Stealth Max fan speed in exhaust mode
-variable_chamber_ciculation_speed: 0.60      # Chamber fan speed in chamber-heating mode
+variable_chamber_ciculation_speed: 0.55      # Chamber fan speed in chamber-heating mode
+variable_chamber_temp_threshold: 91          # If bed temp is above this temperature, then chamber-heating mode will be enabled on print_start
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
@@ -193,5 +199,3 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_ki = 3.785
 #*# pid_kd = 79.217
 #*#
-#*# [tool_probe_endstop]
-#*# z_offset = -0.605
