--- a/Klipper_Config/Beta/T0-SB2209-Revo-LDO.cfg
+++ b/Klipper_Config/Beta/T0-SB2209-Revo-LDO.cfg
@@ -144,7 +144,7 @@ gcode:
 [tool T0]
 tool_number: 0
 extruder: extruder
-fan: fan_generic T0_partfan
+fan: T0_partfan
 gcode_x_offset: 0
 gcode_y_offset: 0
 gcode_z_offset: 0
