--- a/Klipper_Config/Beta/T2-Nitehawk-Revo-G2E.cfg
+++ b/Klipper_Config/Beta/T2-Nitehawk-Revo-G2E.cfg
@@ -161,7 +161,7 @@ gcode:
 [tool T2]
 tool_number: 2
 extruder: extruder2
-fan: fan_generic T2_partfan
+fan: T2_partfan
 # gcode_x_offset: 0
 # gcode_y_offset: 0
 # gcode_z_offset: 0
