--- a/Klipper_Config/Beta/T3-Nitehawk-Revo-LDO.cfg
+++ b/Klipper_Config/Beta/T3-Nitehawk-Revo-LDO.cfg
@@ -160,7 +160,7 @@ gcode:
 [tool T3]
 tool_number: 3
 extruder: extruder3
-fan: fan_generic T3_partfan
+fan: T3_partfan
 # gcode_x_offset: 0
 # gcode_y_offset: 0
 # gcode_z_offset: 0
