--- a/Klipper_Config/Alpha/printer.cfg
+++ b/Klipper_Config/Alpha/printer.cfg
@@ -46,7 +46,7 @@ variable_final_lift_z: 3                     # This must be the same as "final_l
 variable_clean_dock_x: 0.00                  # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
 variable_clean_speed: 7000                   # Don't set too high, the violent shaking may cause problems. CHANGE TO MATCH YOUR SET-UP.
 variable_clean_temp: 200                     # Nozzle clean temperature
-variable_clean_threshold: 145.0              # The minimum perimeter of the print, below which the printing material will not be considered
+variable_clean_threshold: 145.0              # The minimum perimeter of the print, below which no mid-print cleaning of the nozzle will occur.
 ## Always on crash detection
 variable_alway_on_crash_detection: 0         # "0" = False / "1" = True
 ## For heatsoak macro
