--- a/Klipper_Config/1_Main/macro-general.cfg
+++ b/Klipper_Config/1_Main/macro-general.cfg
@@ -16,7 +16,7 @@ gcode:
     {% set toolchange_z = printer['toolchanger'].params_max_z|float %}
     {% if "xyz" not in printer.toolhead.homed_axes %}
         G28
-    {% endif %}
+    {% endif %}
     G0 X{center_x} Y{balance_y} Z{toolchange_z} F10000    # Place toolhead centre-front-250mm
 
 #--------------------------------------------------------------------
@@ -24,19 +24,19 @@ gcode:
 gcode:
     {% if printer['gcode_macro _static_variable'].heatsoak_temp > 0.0 %}
         {% if "xyz" in printer.toolhead.homed_axes %}
-            G0 X175 Y230 Z125 F3600         # Centre the toolhead
-        {% endif %}
+            G0 X175 Y230 Z30 F3600         # Centre the toolhead
+        {% endif %}
         {% set temp = printer['gcode_macro _static_variable'].heatsoak_temp|float %}
         RESPOND TYPE=echo MSG='Chamber Heat Soaking to {temp}C...'
-        SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
+        SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
         SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1.00
         SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=1.00
-        TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={temp}
+        TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={temp}
         M400
         SET_FAN_SPEED FAN=fan_chamber_heater SPEED=0.50
         SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.75
         RESPOND TYPE=echo MSG='Chamber is {temp}C...'
-    {% endif %}
+    {% endif %}
 
 #--------------------------------------------------------------------
 [gcode_macro UNLOAD_FILAMENT]
@@ -48,7 +48,7 @@ gcode:
     M83                           ; set extruder to relative
     G1 E5 F500                    ; extrude 5 mm
     G1 E-50 F1000                 ; retract 5 cm
-    G1 E-50 F1000                 ; retract 5 cm
+    G1 E-30 F1000                 ; retract 3 cm
     M82                           ; set extruder to absolute
     M400                          ; wait for buffer to clear
     TURN_OFF_HEATERS
@@ -58,12 +58,12 @@ gcode:
 [gcode_macro LOAD_FILAMENT]
 gcode:
     INITIALIZE_TOOLCHANGER
-    M117 Loading
+    M117 Loading
     M104 S265
     TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM=240
     M83                           ; set extruder to relative
     G1 E50 F300                   ; extrude 5 cm
-    G1 E50 F300                   ; extrude 5 cm
+    G1 E30 F300                   ; extrude 3 cm
     G1 E-3 F1800                  ; retract some
     M82                           ; set extruder to absolute
     M400                          ; wait for buffer to clear
@@ -83,10 +83,12 @@ gcode:
 gcode:
     {% if printer['output_pin daylight'].value == 0.0 %}
         RESPOND TYPE=echo MSG='{"Light on..."}'
-        SET_PIN PIN=daylight VALUE=0.50
+        SET_PIN PIN=daylight VALUE=0.50
+        # SET_PIN PIN=camera VALUE=1
     {% else %}
         RESPOND TYPE=echo MSG='{"Light off..."}'
         SET_PIN PIN=daylight VALUE=0.00
+        # SET_PIN PIN=camera VALUE=0
     {% endif %}
 
 #--------------------------------------------------------------------
@@ -103,3 +105,24 @@ gcode:
         SET_FAN_SPEED FAN=fan_chamber_heater SPEED=0.00
         SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.00
     {% endif %}
+
+#--------------------------------------------------------------------
+[gcode_macro T_LED_TOGGLE]
+variable_toggle: 0
+gcode:
+    {% if toggle == 0 %}
+        RESPOND TYPE=echo MSG='Tool LED on...'
+        SET_LED LED="T0_hotend_rgb" RED=0.5 GREEN=0.5 BLUE=0.5 WHITE=0.5 SYNC=0 TRANSMIT=1
+        SET_LED LED="T1_hotend_rgb" RED=0.5 GREEN=0.5 BLUE=0.5 WHITE=0.5 SYNC=0 TRANSMIT=1
+        SET_LED LED="T2_hotend_rgb" RED=0.5 GREEN=0.5 BLUE=0.5 WHITE=0.5 SYNC=0 TRANSMIT=1
+        SET_LED LED="T3_hotend_rgb" RED=0.5 GREEN=0.5 BLUE=0.5 WHITE=0.5 SYNC=0 TRANSMIT=1
+        SET_GCODE_VARIABLE MACRO=T_LED_TOGGLE VARIABLE=toggle VALUE=1
+    {% else %}
+        RESPOND TYPE=echo MSG='Tool LED off...'
+        SET_LED LED="T0_hotend_rgb" RED=0 GREEN=0 BLUE=0 WHITE=0 SYNC=0 TRANSMIT=1
+        SET_LED LED="T1_hotend_rgb" RED=0 GREEN=0 BLUE=0 WHITE=0 SYNC=0 TRANSMIT=1
+        SET_LED LED="T2_hotend_rgb" RED=0 GREEN=0 BLUE=0 WHITE=0 SYNC=0 TRANSMIT=1
+        SET_LED LED="T3_hotend_rgb" RED=0 GREEN=0 BLUE=0 WHITE=0 SYNC=0 TRANSMIT=1
+        SET_GCODE_VARIABLE MACRO=T_LED_TOGGLE VARIABLE=toggle VALUE=0
+    {% endif %}
+    
