--- a/Klipper_Config/1_Main/macro-testing.cfg
+++ b/Klipper_Config/1_Main/macro-testing.cfg
@@ -1,6 +1,6 @@
 ####################################################################################
 #	                         TESTING
-####################################################################################
+####################################################################################    
 #--------------------------------------------------------------------
 [gcode_macro DUMP_VARIABLES]
 gcode:
@@ -37,36 +37,32 @@ gcode:
 #--------------------------------------------------------------------
 [gcode_macro TEST_TC_RELIABILITY]
 gcode:
+    {% set noth = 4 %}
     {% set tcno = params.NoTC|default(5)|int %}
     {% set tools = printer.toolchanger.tool_numbers %}
-    SET_GCODE_VARIABLE  MACRO=_print_time  VARIABLE=printing VALUE=1
     ## Set up gantry ------------------------------------------------
     {% if "xyz" not in printer.toolhead.homed_axes %}
         G28
-    {% endif %}
+    {% endif %}
     {% if printer['quad_gantry_level'].applied == False %}
         QUAD_GANTRY_LEVEL
     {% endif %}
     G28
     G0 Z0.2 F9000
-    M106 S125
+    ## print_start parameters ---------------------------------------
+    {% if 'skew_correction' in printer.configfile.config %}
+        SET_SKEW CLEAR=1                                    # Clear skew compensation
+        SKEW_PROFILE LOAD=calilantern_skew_profile          # Load skew compensation
+    {% endif %}
     ## Testing ------------------------------------------------------
     {% for tool in tools %}
         M400
-        {% for n in range(tcno) %}
+        {% for n in range((tcno*(1+1/noth))|int) %}
             M400
             {% set nr = printer.toolchanger.tool_numbers|random %}             # Set a random tool to pickup
-            {% set fs = (range(0, 255)|random)|int %}                          # Set a random part fan speed to pickup
             {% set cur_z = printer.toolhead.position[2]|float %}
-            ## Move up 1 layer
-            _TEST_TC_RELIABILITY_Z_POSITION
-            ## Tool change
-            G4 P500
-            M106 S{fs}
-            G4 P500
-            M400
-            T{nr}
-            M400
+            _TEST_TC_RELIABILITY_Z_POSITION    # Move up 1 layer
+            T{nr}    # Tool change
             RESPOND TYPE=echo MSG='Test cycle: {tool+1} | Change no.:{n+1}'
         {% endfor %}
     {% endfor %}
@@ -75,7 +71,7 @@ gcode:
     
     ## End note -----------------------------------------------------
     M400
-    SET_GCODE_VARIABLE  MACRO=_print_time  VARIABLE=printing VALUE=0
+    SET_SKEW CLEAR=1                                        # Clear skew compensation
     RESPOND TYPE=echo MSG='Reliability test cleared. CONGRATULATION'
 
 #--------------------------------------------------------------------
@@ -83,12 +79,20 @@ gcode:
 gcode:
     {% if "xyz" not in printer.toolhead.homed_axes %}
         G28
-    {% endif %}
+    {% endif %}
     {% if printer['quad_gantry_level'].applied == False %}
         QUAD_GANTRY_LEVEL
+        G28
+    {% endif %}
+    {% if 'skew_correction' in printer.configfile.config %}
+        SET_SKEW CLEAR=1                                    # Clear skew compensation
+        SKEW_PROFILE LOAD=calilantern_skew_profile          # Load skew compensation
     {% endif %}
     TEST_TOOL_DOCKING
-    RESPOND TYPE=error MSG='PRINTER NEED TO BE RE-HOMED'
+    {% if 'skew_correction' in printer.configfile.config %}
+        SET_SKEW CLEAR=1                                    # Clear skew compensation
+    {% endif %}
+    RESPOND TYPE=error MSG='PRINTER NEED TO BE RE-HOMED'  
 
 # #--------------------------------------------------------------------
 # [gcode_macro TEST]
