--- a/Klipper_Config/1_Main/printer.cfg
+++ b/Klipper_Config/1_Main/printer.cfg
@@ -14,6 +14,7 @@
 [include misschanger_settings.cfg]
 ## Other macros
 [include macro-general.cfg]
+[include macro-testing.cfg]
 # ...
 # ...
 # ...
@@ -43,23 +44,23 @@ variable_probe_stable_time: 1000             # Time (in ms) to wait for calibrat
 variable_calibration_abs_z_seperately: 0     # "0" = False / "1" = True. For, the Nudge probe this should be '1'
 variable_final_lift_z: 3                     # This must be the same as "final_lift_z" in [tools_calibrate] in misschanger_settings.cfg
 ## Cleaning dock
-variable_clean_dock_x: 0.00                  # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
+variable_clean_dock_x: 0                     # Set to "0" to disable. X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP.
 variable_clean_speed: 7000                   # Don't set too high, the violent shaking may cause problems. CHANGE TO MATCH YOUR SET-UP.
-variable_clean_temp: 200                     # Nozzle clean temperature
-variable_clean_threshold: 145.0              # The minimum perimeter of the print, below which no mid-print cleaning of the nozzle will occur.
+variable_clean_temp: 200                     # Nozzle clean temperature.
+variable_clean_threshold: 150.0              # The minimum perimeter of the print, below which no mid-print cleaning of the nozzle will occur.
 ## Always on crash detection
-variable_alway_on_crash_detection: 0         # "0" = False / "1" = True
+variable_alway_on_crash_detection: 0         # "0" = False (off) / "1" = True (on)
 ## For heatsoak macro
 variable_heatsoak_temp: 0                    # Set to "0" to disable. Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below.
 ## Dynamic thermal expansion compensation
-variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
+variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
 variable_thermo_expand_temp_high: 70         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
-variable_thermo_expand_temp_low: 0           # Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber].
+variable_thermo_expand_temp_low: 0           # Set to "0" to disable. Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
 ## Fan control
-variable_nm_ciculation_speed: 0.75           # Nevermore Stealth Max fan speed in circulation mode
+variable_nm_ciculation_speed: 1.00           # Nevermore Stealth Max fan speed in circulation mode
 variable_nm_exhaust_speed: 1.00              # Nevermore Stealth Max fan speed in exhaust mode
-variable_chamber_ciculation_speed: 0.55      # Chamber fan speed in chamber-heating mode
-variable_chamber_temp_threshold: 91          # If bed temp is above this temperature, then chamber-heating mode will be enabled on print_start
+variable_chamber_ciculation_speed: 0.25      # Chamber fan speed in chamber-heating mode
+variable_chamber_temp_threshold: 91          # If bed temp is below this temperature, then don't enable chamber-heating mode
 gcode:                                       # This is here to appease klipper
 # ...
 # ...
@@ -159,12 +160,12 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 75.574
 #*#
 #*# [tool T1]
-#*# gcode_x_offset = 0.225000
-#*# gcode_y_offset = 0.243750
-#*# gcode_z_offset = 0.485000
+#*# gcode_x_offset = 0.000
+#*# gcode_y_offset = 0.000
+#*# gcode_z_offset = 0.000
 #*#
 #*# [tool_probe T1]
-#*# z_offset = -0.510000
+#*# z_offset = 0.000
 #*#
 #*# [extruder1]
 #*# control = pid
@@ -173,12 +174,12 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 86.477
 #*#
 #*# [tool T2]
-#*# gcode_x_offset = 0.287500
-#*# gcode_y_offset = 0.934375
-#*# gcode_z_offset = 0.307500
+#*# gcode_x_offset = 0.000
+#*# gcode_y_offset = 0.000
+#*# gcode_z_offset = 0.000
 #*#
 #*# [tool_probe T2]
-#*# z_offset = -1.060000
+#*# z_offset = 0.000
 #*#
 #*# [extruder2]
 #*# control = pid
@@ -187,12 +188,12 @@ max_adjust: 20               # Maximum adjustment stroke for levelling
 #*# pid_kd = 103.505
 #*#
 #*# [tool T3]
-#*# gcode_x_offset = 0.331250
-#*# gcode_y_offset = 0.671875
-#*# gcode_z_offset = 0.220000
+#*# gcode_x_offset = 0.000
+#*# gcode_y_offset = 0.000
+#*# gcode_z_offset = 0.000
 #*#
 #*# [tool_probe T3]
-#*# z_offset = -1.115000
+#*# z_offset = 0.000
 #*#
 #*# [extruder3]
 #*# control = pid
