Update sample config

--- a/Klipper_Config/1_Main/macro-testing.cfg
+++ b/Klipper_Config/1_Main/macro-testing.cfg
@@ -2,7 +2,7 @@
 #	                         TESTING
 ####################################################################################    
 #--------------------------------------------------------------------
-[gcode_macro DUMP_VARIABLES]
+[gcode_macro _DUMP_VARIABLES]
 gcode:
     {% set filter_name = params.NAME|default('')|string|lower %}
     {% set filter_value = params.VALUE|default('')|string|lower %}
@@ -24,9 +24,9 @@ gcode:
 #--------------------------------------------------------------------
 [gcode_macro _TEST_TC_RELIABILITY_Z_POSITION]
 gcode:
-    {% set cur_z = printer.toolhead.position[2]|float %}
-    G90
-    {% if cur_z < printer['toolchanger'].params_max_z|float %}
+    {% set tn = printer.tool_probe_endstop.active_tool_number|string %}
+    {% set cur_z = printer.toolhead.position[2]|float - printer['tool T' + tn].gcode_z_offset|float %}
+    {% if cur_z < (printer['toolchanger'].params_max_z - 50) |float %}
         G0 Z{cur_z + 0.2} F9000
     {% else %}
         G0 Z0.2 F9000
@@ -36,42 +36,23 @@ gcode:
 
 #--------------------------------------------------------------------
 [gcode_macro TEST_TC_RELIABILITY]
+variable_noth: 4
 gcode:
-    {% set noth = 4 %}
-    {% set tcno = params.NoTC|default(5)|int %}
-    {% set tools = printer.toolchanger.tool_numbers %}
-    ## Set up gantry ------------------------------------------------
-    {% if "xyz" not in printer.toolhead.homed_axes %}
-        G28
-    {% endif %}
-    {% if printer['quad_gantry_level'].applied == False %}
-        QUAD_GANTRY_LEVEL
-    {% endif %}
-    G28
-    G0 Z0.2 F9000
-    ## print_start parameters ---------------------------------------
-    {% if 'skew_correction' in printer.configfile.config %}
-        SET_SKEW CLEAR=1                                    # Clear skew compensation
-        SKEW_PROFILE LOAD=calilantern_skew_profile          # Load skew compensation
-    {% endif %}
+    {% set tcno_per_tool = params.TC|default(5)|int %}                     # Number of tool-changes per tool-head
+    {% set tools = printer.toolchanger.tool_numbers %}                     # List of tools
+    {% set total_no_tc = (tcno_per_tool*noth*(1+1/noth))|int %}
     ## Testing ------------------------------------------------------
-    {% for tool in tools %}
-        M400
-        {% for n in range((tcno*(1+1/noth))|int) %}
-            M400
-            {% set nr = printer.toolchanger.tool_numbers|random %}             # Set a random tool to pickup
-            {% set cur_z = printer.toolhead.position[2]|float %}
-            _TEST_TC_RELIABILITY_Z_POSITION    # Move up 1 layer
-            T{nr}    # Tool change
-            RESPOND TYPE=echo MSG='Test cycle: {tool+1} | Change no.:{n+1}'
-        {% endfor %}
+    RESPOND TYPE=echo MSG='Test {total_no_tc} tool-changes'
+    {% for n in range(1,total_no_tc) %}
+        {% set nr = printer.toolchanger.tool_numbers|random %}             # Set a random tool to pickup
+        _TEST_TC_RELIABILITY_Z_POSITION                                    # Move up 1 layer
+        T{nr}                                                              # Tool change
+        RESPOND TYPE=echo MSG='Change no.:{n}'
     {% endfor %}
     T0
     G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
-    
     ## End note -----------------------------------------------------
     M400
-    SET_SKEW CLEAR=1                                        # Clear skew compensation
     RESPOND TYPE=echo MSG='Reliability test cleared. CONGRATULATION'
 
 #--------------------------------------------------------------------
@@ -82,19 +63,11 @@ gcode:
     {% endif %}
     {% if printer['quad_gantry_level'].applied == False %}
         QUAD_GANTRY_LEVEL
-        G28
-    {% endif %}
-    {% if 'skew_correction' in printer.configfile.config %}
-        SET_SKEW CLEAR=1                                    # Clear skew compensation
-        SKEW_PROFILE LOAD=calilantern_skew_profile          # Load skew compensation
     {% endif %}
     TEST_TOOL_DOCKING
-    {% if 'skew_correction' in printer.configfile.config %}
-        SET_SKEW CLEAR=1                                    # Clear skew compensation
-    {% endif %}
     RESPOND TYPE=error MSG='PRINTER NEED TO BE RE-HOMED'  
 
 # #--------------------------------------------------------------------
-# [gcode_macro TEST]
+# [gcode_macro _TEST]
 # gcode:
     
