--- a/Klipper_Config/1_Main/printer.cfg
+++ b/Klipper_Config/1_Main/printer.cfg
@@ -1,5 +1,5 @@
 [include mainsail.cfg]
-## default marcros
+## default macros
 [include misschanger_macros/config_switch.cfg]
 [include misschanger_macros/homing.cfg]
 [include misschanger_macros/nozzle_clean.cfg]
@@ -8,7 +8,7 @@
 [include misschanger_macros/tool_calibrate.cfg]
 [include misschanger_macros/toolchanger.cfg]
 [include misschanger_macros/offsets_adjust_record.cfg]
-# ## optional default marcros
+# ## optional default macros
 # [include misschanger_macros/tool_calibrate_extra.cfg]    # For the Nudge probe
 ## misschanger settings
 [include misschanger_settings.cfg]
